allprojects {
    group = 'com.oikoaudio'
    repositories {
        maven {
            url = 'https://maven.bitwig.com/'
        }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    test {
        useJUnitPlatform()
        jvmArgs += [
                '--add-opens=java.base/java.util.function=ALL-UNNAMED'
        ]
    }
}
